-
Type:
Bug
-
Status: Closed
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 3.1.0, 3.0.0
-
Fix Version/s: 3.1.0
-
Component/s: Clustering
when you set an invalid interface in proxy.config.cluster.ethernet_interface, it will just crash.
[Jun 20 15:31:15.350] Manager {140230882367264} FATAL: [LocalManager::initCCom] Unable to find network interface eth5. Exiting...
[Jun 20 15:31:15.350] Manager {140230882367264} FATAL: (last system error 2: No such file or directory)
[Jun 20 15:31:15.351] Manager {140230882367264} NOTE: [LocalManager::mgmtShutdown] Executing shutdown request.
[Jun 20 15:31:15.351] Manager {140230882367264} NOTE: [LocalManager::processShutdown] Executing process shutdown request.